--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -15,6 +15,7 @@
   z-index: 9999;
 }
 
+
 .navbar-logo {
   color: #222;
   font-size: 1.5rem;
@@ -31,10 +32,11 @@
 
 .nav-menu {
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(6, auto);
   grid-gap: 10px;
   list-style: none;
-  align-items: center;
+  
 }
 
 .nav-links {
@@ -46,6 +48,8 @@
   white-space: nowrap;
   border-radius: 10px;
   transition: all 0.3s ease;
+  
+  
 }
 .nav-links i {
   padding-right: 10px;
@@ -55,6 +59,7 @@
   background-color: #fcd116;
   color: #ce1126;
   transition: all 0.3s ease;
+  
 }
 .nav-links-mobile {
   display: none;
@@ -80,6 +85,10 @@ button:hover {
 .menu-icons {
   display: none;
 }
+
+
+
+/*/ small screen/*/
 
 @media screen and (max-width: 850px) {
   .NavBarItems {
