--- a/src/components/FooterStyles.css
+++ b/src/components/FooterStyles.css
@@ -25,10 +25,10 @@
 
 .bottom {
   padding: 2rem 0rem;
-  display: flex; /* Add display flex to the bottom div */
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  flex-direction: column; /* Arrange items vertically */
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  flex-direction: column; 
 }
 
 .bottom div {
