--- a/src/components/AboutMeStyles.css
+++ b/src/components/AboutMeStyles.css
@@ -14,3 +14,25 @@
   padding-bottom: 2rem;
   width: 100%;
 }
+
+
+.reach-me {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; 
+  margin-top: 3rem;
+}
+.email-section,
+.phone-section {
+  display: flex;
+  
+  margin-top: 1rem; /* Adjust margin as needed */
+}
+
+.email-logo,
+.phone-logo {
+  width: 30px;
+  height: 30;
+  margin-right: 2rem;
+  
+}
