--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,68 @@
 .App {
   text-align: center;
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body{
+  background: #000;
+}
+
+.photo-container {
+  margin: 120px 20px 20px; /* Updated margin */
+  overflow: hidden;
+  padding: 10rem 0;
+  background-color: #121212;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  padding-top: 70px;
+}
+
+.photo-container h1{
+  color: #fff;
+  font-size: 3rem;
+  
+}
+.photo-container p{
+  color: #fff;
+  font-size: 1.5rem;
+  padding: 1rem;
+  margin-bottom: 20px;
+}
+.photo-container img {
+  width: 100%;
+  height: 600px;
+  border-radius:20px;
+}
+.item {
+  margin-right: 40px; /* Adjust as needed */
+}
+.item h5{
+  color: #fff;
+  font-size: 1.5rem;
+  
+
+}
+.react-multi-carousel-list {
+padding: 0rem 0 2rem 0;
+}
+
+.custom-dot-list-style button {
+  border: none;
+  background: rgb(255, 68, 68);
+  
+}
+
+.react-multi-carousel-dot.react-multi-carousel-dot--active button{
+background: rgb(255, 68, 68) !important;
+}
+
+@media screen and (max-width: 850px) {
+  .photo-container img {
+    width: 100%;
+    height: 400px;
+    border-radius:20px;
+  }
+}
