--- a/src/components/ContactFormStyles.css
+++ b/src/components/ContactFormStyles.css
@@ -10,6 +10,18 @@
   margin: auto;
 }
 
+.form-container h1 {
+  font-size: 45px;
+  font-weight: 500;
+  text-align: center;
+}
+
+
+.form label {
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
 .form-container input {
   padding: 0.5rem 1rem;
   height: 3rem;
@@ -20,6 +32,19 @@
   font-weight: 500;
 }
 
+.form textarea {
+  min-height: 150px; /* Adjust the minimum height of the textarea */
+}
+.form input,
+.form textarea {
+  padding: 0.5rem 1rem;
+  height: 3rem;
+  margin-bottom: 2rem;
+  border-radius: 0.3rem;
+  border: 1px solid #2a2a2a;
+  font-size: 1rem;
+  font-weight: 500;
+}
 .form-container textarea {
   padding: 1rem;
 
@@ -30,8 +55,32 @@
   font-weight: 500;
 }
 
-.form-container button {
-  display: inline;
+
+.form .submit-btn{
+  background-color: #000;
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.3rem;
+  cursor: pointer;
+
+}
+.form .submit-btn:hover{
+  color: #CE1126;
+  background-color: #FCD116;
+  transition: 0.3s ease-in-out;
+
+}
+
+.form-container  .img {
+  width:40%
+}
+
+.image-container {
+  max-width: 300px; /* Adjust the maximum width as needed */
+  margin: auto; /* Center the image horizontally */
 }
 
 @media screen and (max-width: 850px) {
